--- a/modules/users/client/views/settings/manage-social-accounts.client.view.html
+++ b/modules/users/client/views/settings/manage-social-accounts.client.view.html
@@ -16,7 +16,7 @@
         <i class="glyphicon glyphicon-plus"></i>
       </a>
     </div>
-    <div class="social-account-container" ng-hide="isConnectedSocialAccount('twitter')">
+    <!-- <div class="social-account-container" ng-hide="isConnectedSocialAccount('twitter')">
       <img ng-src="/modules/users/client/img/buttons/twitter.png">
       <a class="btn btn-success btn-remove-account" href="/api/auth/twitter" target="_self">
         <i class="glyphicon glyphicon-plus"></i>
@@ -45,6 +45,6 @@
       <a class="btn btn-success btn-remove-account" href="/api/auth/paypal" target="_self">
         <i class="glyphicon glyphicon-plus"></i>
       </a>
-    </div>
+    </div> -->
   </div>
 </section>
