--- a/modules/games/client/views/form-game.client.view.html
+++ b/modules/games/client/views/form-game.client.view.html
@@ -18,10 +18,18 @@
           <input name="location" type="text" ng-model="self.game.location" id="location" class="form-control" placeholder="location">
         </div>
 
-        <!-- <div class="form-group">
+        <div class="form-group">
           <label class="control-label" for="date">Date</label>
-          <md-datepicker ng-model="self.game.date" md-placeholder="Enter date" md-open-on-focus></md-datepicker>
-        </div> -->
+          <!-- <md-datepicker ng-model="self.game.date" md-placeholder="Enter date" md-open-on-focus></md-datepicker> -->
+          <uib-datepicker ng-model="self.game.date" date-format="DD-MM-YYYY">
+        </div>
+
+        <div class="form-group">
+          <label class="control-label">Time</label>
+            <!-- <uib-timepicker ng-model="self.game.date" hour-step="hstep" minute-step="mstep"></uib-timepicker> -->
+            <uib-timepicker name="fromDateTime" ng-model="self.game.date"  hour-step="1" minute-step="5" show-meridian="false">
+            </uib-timepicker>
+        </div>
 
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{self.game._id ? 'Update' : 'Create'}}</button>
